# libsrk31cxx

./: .gitignore  INSTALL  Makefile  Makefile.am  configure.ac  libsrk31c++.pc.in  libsrk31cxx.pc.in
include/: Makefile.am  algorithm.hpp  array.hpp  array_slice_iterator.hpp  concatenating_iterator.hpp  conjoining_iterator.hpp  indenting_ostream.hpp  rotate.hpp  selective_iterator.hpp  util.hpp
include/srk31/: algorithm.hpp  array.hpp  closure.hpp  concatenating_iterator.hpp  conjoining_iterator.hpp  endian.hpp  indenting_ostream.hpp  ordinal.hpp  selective_iterator.hpp  transform_iterator.hpp  util.hpp
libsrk31c++/: Makefile  conjoining_iterator.hpp  downcasting_iterator.hpp  indenting_ostream.cpp  indenting_ostream.hpp  iterator_with_lens.hpp  selective_iterator.hpp  test.cpp
libsrk31c++/include/: downcasting_iterator.hpp
src/: Makefile  Makefile.am  indenting_ostream.cpp
